tdf#107593 Show the cursor after header/footer delete

Change-Id: I978f088fa700791d48a5a65392f980822ac14bd2